kcms/scripts: Check result from loading UI file

And don't crash on a faulty file

BUG: 517137